src/objects/SW_Bundle_Application__c.object
<CustomObject>
    <fields>
        <fullName>Anticipated_Contract_Closure_Date__c</fullName>
        <label>Anticipated Contract Closure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anticipated_SW_Delivery_Date__c</fullName>
        <inlineHelpText>When will this Software be delivered?</inlineHelpText>
        <label>Anticipated SW Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipName>Service_Type_Applications1</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Approved_for_inclusion_in_Games_Showcase__c</fullName>
        <inlineHelpText>Auto calculated field, based on MMI and Partner approval.  Once both sides approve, this field will be automatically set to &quot;Yes&quot;</inlineHelpText>
        <label>Final Approved for Inclusion in Bundle</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <formula>Application__r.Application_Contract_Governing_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Let_Expire__c</fullName>
        <formula>Application__r.Application_Contract_Let_Expire__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract - Let Expire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Phase__c</fullName>
        <formula>Application__r.Application_Contract_Phase__c</formula>
        <label>Contract Phase</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Differentiation__c</fullName>
        <label>Differentiation</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MMI_Approval_for_Games_Showcase__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this app approved yet by MMI, to be included in the Bundle?
(This field applies only for apps requiring approvals for Bundle inclusion)</description>
        <inlineHelpText>Is this app approved yet by MMI, to be included in the Bundle?
(This field applies only for apps requiring approvals for Bundle inclusion)</inlineHelpText>
        <label>MMI Approval for for Bundle?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Approval_for_Games_Showcase__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this app approved yet by the Partner, to be included in the Bundle?
(This field applies only for apps requiring approvals for Bundle inclusion)</description>
        <inlineHelpText>Is this app approved yet by the Partner, to be included in the Bundle?
(This field applies only for apps requiring approvals for Bundle inclusion)</inlineHelpText>
        <label>Partner Approval for Bundle?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Royalty_Attribute__c</fullName>
        <formula>text(Application__r.Royalty_Payment_Attribute__c)</formula>
        <label>Royalty Attribute</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Royalty_Current__c</fullName>
        <formula>Application__r.Royalty_Current__c</formula>
        <label>Royalty Current</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Royalty_High__c</fullName>
        <formula>Application__r.Royalty_High__c</formula>
        <label>Royalty High</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Royalty_Low__c</fullName>
        <formula>Application__r.Royalty_Low__c</formula>
        <label>Royalty Low</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SWBundle_App_Item_State__c</fullName>
        <formula>IF(and((Contract_End_Date__c &gt;= TODAY()+15),(Contract_Phase__c = &apos;Execution and Processing&apos;)), &apos;State 35&apos;, &apos;State 12&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SWBundle-App Item State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>SW Bundle</label>
        <referenceTo>SW_Bundle__c</referenceTo>
        <relationshipLabel>SW Bundle Applications</relationshipLabel>
        <relationshipName>Service_Type_Applications1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>SW Bundle Application</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ST-{000000000}</displayFormat>
        <label>SW Bundle Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SW Bundle Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>